Initial Implementation of Trigger and Batch Class for Merging Lead Records

--- a/Lead Merger/manifest/package.xml
+++ b/Lead Merger/manifest/package.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <version>63.0</version>
+	<types>
+		<members>CustomLogger</members>
+		<members>CustomLoggerTest</members>
+		<members>LeadDuplicateHandler</members>
+		<members>LeadDuplicateHandlerTest</members>
+		<members>LeadDuplicateMerger</members>
+		<members>LeadDuplicateMergerTest</members>
+		<members>LeadMergerBatch</members>
+		<members>LeadMergerBatchTest</members>
+		<members>LeadTriggerHandler</members>
+		<members>LeadTriggerHandlerTest</members>
+		<members>LeadTriggerTest</members>
+		<members>TriggerContext</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>LeadTrigger</members>
+		<name>ApexTrigger</name>
+	</types>
+	<types>
+		<members>CustomLog__c.ContextUser__c</members>
+		<members>CustomLog__c.Message__c</members>
+		<members>CustomLog__c.RelatedRecordId__c</members>
+		<members>CustomLog__c.Type__c</members>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>CustomLog__c</members>
+		<name>CustomObject</name>
+	</types>
+	<version>63.0</version>
 </Package>
